testsuite/tests/gadt/gadt-escape1.stderr

gadt-escape1.hs:19:58: error:
    • Couldn't match type ‘r’ with ‘ExpGADT Int’
        ‘r’ is untouchable
          inside the constraints: t ~ Int
          bound by a pattern with constructor: ExpInt :: Int -> ExpGADT Int,
                   in a case alternative
          at gadt-escape1.hs:19:43-50
      ‘r’ is a rigid type variable bound by
        the inferred type of weird1 :: r at gadt-escape1.hs:19:1
      Possible fix: add a type signature for ‘weird1’
      Expected type: r
        Actual type: ExpGADT t
    • In the expression: a
      In a case alternative: Hidden (ExpInt _) a -> a
      In the expression:
        case (hval :: Hidden) of { Hidden (ExpInt _) a -> a }
    • Relevant bindings include
        weird1 :: r (bound at gadt-escape1.hs:19:1)
